# Perso

./: README.md
C/Exos/: 1102.c  1203.c  305.c  306.c  905.c
C/Exos/1) Exercices 304 à 306/: 304.c
C/Exos/12) Exercices 1601 à 1609/: 1602.c  1604.c
C/Exos/2) Exercices 401 à 405/: 405.c
C/Exos/5) Exercices 701 à 710/: 710.c
C/Projet/: affichage_console.c  affichage_console.h  affichagecentré.c  centragetexte.c  dialogue.h  external_console.c  external_console.h  main.c  stockage.c  tour.c
C/Projet Corridor/: .gitignore  README.md  modifications.h  structures.h
C/Projet Dofus/: CMakeLists.txt  README.md  globals.h  init.c  menu.c  menu.h  name.c  name.h
C/Projet Dofus/GRAPHISMES/: bouttons.c  bouttons.h  graphismes.c  graphismes.h
C/Projet Dofus/JEU/: jeu.c  jeu.h  structures.h
C/Projet Dofus/LAN/: LAN.c  LAN.h  client.py  crossplatform.h  serveur.py
C/Projet Dofus/Projet/Fichiers textes/: DefClasses.txt
C/Projet Dofus/Projet/Fichiers textes/Classe/: 1.txt  11.txt  12.txt  2.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
C/Projet/ALLEGRO/: main.c  (+1 more)
Java/Chap1/: Exo11.java  Exo2.java  Exo6.java  Exo7.java  Exo8.java  Exo9.java
Java/Chap2/: Exo2.java  Exo3.java  Exo4.java  Exo5.java  Exo6.java
Language C/Projet Corridor/: CMakeLists.txt  dialogue.c  initialisation.c  initialisation.h  macros.h  main.c  menu.c  menu.h  modifications.c  stockage.h  tour.h  tout.h  verifications.c  verifications.h
Language C/Projet Corridor/ALLEGRO/: getBlindedStr.c  getBlindedStr.h  main.h
Language C/Projet Corridor/SAVES/: savePartie.txt
Language C/Projet Dofus/: .gitignore  init.h  main.c  version.c  version.h
Language Java/Chap1/: Exo1.java  Exo10.java  Exo12.java  Exo13.java  Exo14.java  Exo3.java  Exo4.java  Exo5.java  TP1.java
Language Java/Chap2/: Exo1.java  Exo10.java  Exo11.java  Exo12.java  Exo13.java  Exo14.java  Exo15.java  Exo7.java  Exo8.java  Exo9.java
Language Java/Chap3/: Exo1.java  Exo2.java  Exo3.java  Exo5.java  Exo6.java  Exo7.java
Language Java/Chap4/: Exo1.java  Exo2.java  Exo3.java  Exo4.java  Exo5.java  Exo6.java  Exo7.java  Exo8.java  Exo9.java
Language Java/Chap5/: Exo1.java  Exo2.java  Exo3.java
Language Java/Chap6/: Exo1.java  Exo2.java  Exo3.java  Exo4.java  Exo5.java  Exo6.java  Exo7.java
(+70 files in other folders)
